--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "tradehax-programs-tests",
-  "version": "1.0.0",
-  "description": "Testing suite for TradeHax Solana programs",
+  "name": "tradehax-claim",
+  "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "test-critical": "node test-critical-path.js",
-    "test-thorough": "node test-thorough.js",
-    "test": "npm run test-thorough"
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy"
   },
   "dependencies": {
-    "@solana/web3.js": "^1.87.6",
-    "@project-serum/anchor": "^0.26.0",
-    "@solana/spl-token": "^0.3.8"
+    "@solana/spl-token": "^0.4.6",
+    "@solana/web3.js": "^1.95.0",
+    "@noble/ed25519": "^2.1.0"
+  },
+  "devDependencies": {
+    "wrangler": "^3.80.0"
   }
 }
