--- a/.env.example
+++ b/.env.example
@@ -1,41 +1,9 @@
-# Analytics
-NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
-NEXT_PUBLIC_VERCEL_ANALYTICS_ID=
+SHAMROCK_MINT=YourMintPubkeyHere
+AUTHORITY_SECRET=[1,2,3,...,32]
+SOLANA_RPC=https://api.devnet.solana.com
+MONGODB_URI=mongodb+srv://user:pass@cluster...
 
-# Monetization - Google AdSense
-NEXT_PUBLIC_ADSENSE_ID=ca-pub-XXXXXXXXXXXXXXXX
-
-# Email Marketing (Server-side only)
-MAILCHIMP_API_KEY=
-MAILCHIMP_LIST_ID=
-# Alternative: ConvertKit
-NEXT_PUBLIC_CONVERTKIT_API_KEY=
-NEXT_PUBLIC_CONVERTKIT_FORM_ID=
-
-# Stripe Payment Processing
-STRIPE_SECRET_KEY=sk_test_XXXX
-STRIPE_PUBLISHABLE_KEY=pk_test_XXXX
-STRIPE_WEBHOOK_SECRET=whsec_XXXX
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_XXXX
-
-# Solana Configuration
-NEXT_PUBLIC_SOLANA_NETWORK=devnet
-NEXT_PUBLIC_SOLANA_RPC_HOST=https://api.devnet.solana.com
-NEXT_PUBLIC_SOLANA_FEE_WALLET=YourSolanaWalletAddress
-
-# Affiliate Program Links
-NEXT_PUBLIC_COINBASE_REF=https://coinbase.com/join/YOUR_REF
-NEXT_PUBLIC_BINANCE_REF=https://binance.com/ref/YOUR_REF
-NEXT_PUBLIC_PHANTOM_REF=https://phantom.app/?ref=YOUR_REF
-NEXT_PUBLIC_LEDGER_REF=https://shop.ledger.com/?r=YOUR_REF
-NEXT_PUBLIC_TRADINGVIEW_REF=https://tradingview.com/?aff_id=YOUR_REF
-NEXT_PUBLIC_COINGECKO_REF=https://coingecko.com/?ref=YOUR_REF
-NEXT_PUBLIC_ALCHEMY_REF=https://alchemy.com/?r=YOUR_REF
-
-# App Configuration
-NEXT_PUBLIC_APP_URL=https://tradehaxai.tech
-NEXT_PUBLIC_CONTACT_EMAIL=support@tradehaxai.tech
-
-# Premium Features
-NEXT_PUBLIC_PREMIUM_MONTHLY_PRICE=9.99
-NEXT_PUBLIC_PREMIUM_ANNUAL_PRICE=99.99
+TWITTER_APP_KEY=your_twitter_app_key
+TWITTER_APP_SECRET=your_twitter_app_secret
+TWITTER_ACCESS_TOKEN=your_twitter_access_token
+TWITTER_ACCESS_SECRET=your_twitter_access_secret
