--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,14 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+node_modules/
+.env
+.env.local
 .DS_Store
-*.pem
-support-headers/
-
-# debug
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-# Program (Anchor/Solana)
-program/.anchor
-program/target
-program/**/*.rs.bk
-program/test-ledger
-program/.yarn
-
-# Lock files (regenerated on install)
-**/pnpm-lock.yaml
-**/package-lock.json
-**/yarn.lock
-
-# Temporary files
-*.orig.*
-*tmp_*
-*test*.html
-probe.txt
-*_ORIGINAL.*
+.vscode
+.idea
+dist/
+build/
+.env.production
+.env
