--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
-  "name": "tradehax-programs-tests",
+  "name": "tradehax-backend",
   "version": "1.0.0",
-  "description": "Testing suite for TradeHax Solana programs",
-  "private": true,
+  "description": "TradeHax Solana L2 Backend - Task rewards and SHAMROCK token distribution",
+  "main": "api/index.js",
+  "type": "commonjs",
   "scripts": {
-    "test-critical": "node test-critical-path.js",
-    "test-thorough": "node test-thorough.js",
-    "test": "npm run test-thorough"
+    "dev": "node api/index.js",
+    "start": "node api/index.js"
   },
   "dependencies": {
+    "@metaplex-foundation/js": "^0.20.1",
+    "@metaplex-foundation/mpl-token-metadata": "^3.2.0",
+    "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.87.6",
-    "@project-serum/anchor": "^0.26.0",
-    "@solana/spl-token": "^0.3.8"
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.2.4",
+    "multer": "2.0.2",
+    "twitter-api-v2": "^1.16.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
