chore: re-commit all files for clean Vercel deploy after settings change

--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,13 @@ SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
 
 # Optional: Discord webhook for critical backend alerts (e.g., Solana failures)
 # DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/...
+
+# ============================================
+# Next.js/Frontend Public Environment Variables
+# ============================================
+NEXT_PUBLIC_SOLANA_NETWORK=mainnet-beta
+NEXT_PUBLIC_SOLANA_RPC=https://api.mainnet-beta.solana.com
+NEXT_PUBLIC_HELIUS_API_KEY=heliusdemo
+NEXT_PUBLIC_CLAIM_API_BASE=https://tradehaxai.tech/api/claim
+NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=
+# NEXT_PUBLIC_FEATURE_FLAG=
