--- a/.github/workflows/copilot-commit.yml
+++ b/.github/workflows/copilot-commit.yml
@@ -29,3 +29,9 @@ jobs:
           working-directory: ./
         env:
           VERCEL_TOKEN: ltLFGpRVBvstHWuZgzABsPIE
+
+const nextConfig = {
+  output: 'export',
+  // ...other config
+};
+module.exports = nextConfig;
