Enables unittest and configures test discovery settings
Switches Python testing to use unittest instead of pytest.
Configures test discovery to run verbose tests on all files matching *test.py.
Facilitates consistent test execution within the development environment.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,14 @@
     "chat.agent.maxRequests": 50,
     "chat.useAgentSkills": true,
     "inlineChat.enableV2": true,
-    "chat.useNestedAgentsMdFiles": true
+    "chat.useNestedAgentsMdFiles": true,
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        ".",
+        "-p",
+        "*test.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true
 }
