--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -1,8 +1,6 @@
 name: Deploy to GitHub Pages
 
 on:
-  push:
-    branches: [main]
   workflow_dispatch:
 
 permissions:
@@ -16,29 +14,29 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
-          
+          node-version: "20"
+          cache: "npm"
+
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Build static site
         run: npm run build
         env:
           NEXT_PUBLIC_SITE_URL: https://tradehaxai.tech
           NEXT_PUBLIC_SOLANA_NETWORK: mainnet-beta
           NEXT_PUBLIC_SOLANA_RPC: https://api.mainnet-beta.solana.com
-          
+
       - name: Add CNAME file
         run: echo "tradehaxai.tech" > ./out/CNAME
-        
+
       - name: Add .nojekyll file
         run: touch ./out/.nojekyll
-        
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
