feat(game): add structured scoring, leaderboard, and OAuth/Web5 identity flow

--- a/.env.example
+++ b/.env.example
@@ -68,6 +68,11 @@ NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=
 # JWT Secret - Generate with: openssl rand -base64 32
 JWT_SECRET=
 
+# NextAuth settings for OAuth and leaderboard identity
+# Generate NEXTAUTH_SECRET with: openssl rand -base64 32
+NEXTAUTH_URL=https://tradehaxai.tech
+NEXTAUTH_SECRET=
+
 # Discord OAuth (optional - for Discord login)
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
@@ -78,7 +83,14 @@ DISCORD_GUILD_ID=
 # Google OAuth (optional - for Google login)
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=https://tradehaxai.tech/auth/google/callback
+# Callback URL in Google console:
+# https://tradehaxai.tech/api/auth/callback/google
+
+# Facebook OAuth (optional - for Facebook login)
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+# Callback URL in Facebook app settings:
+# https://tradehaxai.tech/api/auth/callback/facebook
 
 # ============================================
 # Database (if using backend with database)
