--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.0",
     "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.479.0",
-    "@solana/wallet-adapter-wallets": "^0.19.37",
     "next": "16.1.6",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -42,7 +43,6 @@
     "three": "^0.182.0"
   },
   "devDependencies": {
-    "rimraf": "^5.0.0",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
@@ -51,8 +51,9 @@
     "@types/three": "^0.182.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.8",
+    "nx": "22.5.0",
+    "rimraf": "^5.0.0",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "nx": "22.5.0"
+    "typescript": "^5"
   }
 }
