feat: wire contact funnel, scheduling, and affiliate attribution

--- a/.env.example
+++ b/.env.example
@@ -115,6 +115,47 @@ FACEBOOK_CLIENT_SECRET=
 # SENDGRID_API_KEY=
 
 # ============================================
+# Business Contact + Funnel Links
+# ============================================
+# Public contact endpoints used in CTA funnels
+NEXT_PUBLIC_CONTACT_EMAIL=irishmikeflaherty@gmail.com
+NEXT_PUBLIC_CONTACT_PHONE_E164=+16094128878
+NEXT_PUBLIC_CONTACT_PHONE_DISPLAY=(609) 412-8878
+NEXT_PUBLIC_TEXT_PREFILL=Hi TradeHax AI, I want to schedule a service.
+
+# Google Workspace / scheduling links
+NEXT_PUBLIC_GOOGLE_CALENDAR_EMBED_URL=
+NEXT_PUBLIC_GOOGLE_MEET_BOOKING_URL=
+NEXT_PUBLIC_BOOKING_PRIMARY_URL=
+
+# Optional overrides for each booking lane
+NEXT_PUBLIC_BOOKING_GUITAR_LESSONS=
+NEXT_PUBLIC_BOOKING_WEB3_CONSULT=
+NEXT_PUBLIC_BOOKING_TRADING_CONSULT=
+NEXT_PUBLIC_BOOKING_TECH_SUPPORT=
+NEXT_PUBLIC_BOOKING_SOCIAL_MEDIA_CONSULT=
+NEXT_PUBLIC_BOOKING_IT_MANAGEMENT=
+NEXT_PUBLIC_BOOKING_APP_DEVELOPMENT=
+NEXT_PUBLIC_BOOKING_DATABASE_CONSULT=
+NEXT_PUBLIC_BOOKING_ECOMMERCE_CONSULT=
+
+# Social profiles
+NEXT_PUBLIC_SOCIAL_X_URL=https://x.com/tradehaxai
+NEXT_PUBLIC_SOCIAL_YOUTUBE_URL=https://www.youtube.com/@tradehaxnet
+NEXT_PUBLIC_SOCIAL_GITHUB_URL=https://github.com/DarkModder33/main
+NEXT_PUBLIC_SOCIAL_FACEBOOK_URL=
+NEXT_PUBLIC_SOCIAL_INSTAGRAM_URL=
+
+# Affiliate URLs (keep full referral URL/path to preserve attribution credit)
+NEXT_PUBLIC_COINBASE_REF=
+NEXT_PUBLIC_BINANCE_REF=
+NEXT_PUBLIC_PHANTOM_REF=
+NEXT_PUBLIC_LEDGER_REF=
+NEXT_PUBLIC_TRADINGVIEW_REF=
+NEXT_PUBLIC_COINGECKO_REF=
+NEXT_PUBLIC_ALCHEMY_REF=
+
+# ============================================
 # Payment Integration (optional)
 # ============================================
 # Stripe keys for payment processing
