--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "14.1.0",
+    "framer-motion": "^11.0.8",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1",
     "lucide-react": "^0.330.0"
