--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "onnxruntime-web": "^1.24.1",
+    "pino-pretty": "^13.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.1",
@@ -54,7 +55,7 @@
     "@types/react-dom": "^19",
     "@types/three": "^0.182.0",
     "autoprefixer": "^10.4.24",
-    "eslint": "^9",
+    "eslint": "^9.1.0",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "rimraf": "^5.0.0",
