--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -21,17 +21,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Clean workspace
-        run: npm run clean
-
-      - name: Run vercel config checks
-        run: bash ./scripts/check-vercel-config.sh
-
-      - name: Run DNS config checks
-        run: bash ./scripts/check-dns-config.sh
-
-      - name: Build
-        run: npm run build
+      - name: Run CI pipeline contract
+        run: npm run pipeline:ci
 
       - name: Upload build log
         if: failure()
