--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,30 +1,45 @@
-{ 
-    \"version\": \"0.2.0\", 
-    \"configurations\": [ 
-        { 
-            \"name\": \"Next.js: Debug Server\", 
-            \"type\": \"node-terminal\", 
-            \"request\": \"launch\", 
-            \"command\": \"npm run dev\", 
-            \"serverReadyAction\": { 
-                \"pattern\": \"- Local:\\s+(https?://\\S+)\", 
-                \"uriFormat\": \"%%s\", 
-                \"action\": \"debugWithChrome\" 
-            } 
-        }, 
-        { 
-            \"name\": \"Next.js: Debug Client\", 
-            \"type\": \"chrome\", 
-            \"request\": \"launch\", 
-            \"url\": \"http://localhost:3000\", 
-            \"webRoot\": \"${workspaceFolder}\", 
-            \"sourceMaps\": true 
-        }, 
-        { 
-            \"name\": \"Next.js: Build\", 
-            \"type\": \"node-terminal\", 
-            \"request\": \"launch\", 
-            \"command\": \"npm run build\" 
-        } 
-    ] 
+{
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "TradeHax: Next.js Full Stack",
+      "type": "node-terminal",
+      "request": "launch",
+      "command": "npm run dev",
+      "serverReadyAction": {
+        "pattern": "Local:\\s+(https?://\\S+)",
+        "uriFormat": "%s",
+        "action": "debugWithChrome"
+      }
+    },
+    {
+      "name": "TradeHax: Browser Debug",
+      "type": "pwa-chrome",
+      "request": "launch",
+      "url": "http://localhost:3000",
+      "webRoot": "${workspaceFolder}"
+    },
+    {
+      "name": "TradeHax: VS Code Extension",
+      "type": "extensionHost",
+      "request": "launch",
+      "runtimeExecutable": "${execPath}",
+      "args": [
+        "--extensionDevelopmentPath=${workspaceFolder}/.vscode-extension"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/.vscode-extension/dist/**/*.js"
+      ],
+      "preLaunchTask": "TradeHax: Extension Build"
+    }
+  ],
+  "compounds": [
+    {
+      "name": "TradeHax: App + Extension",
+      "configurations": [
+        "TradeHax: Next.js Full Stack",
+        "TradeHax: VS Code Extension"
+      ]
+    }
+  ]
 }
