--- a/.zenflow/settings.json
+++ b/.zenflow/settings.json
@@ -1,6 +1,6 @@
 {
   "setup_script": "npm install",
   "dev_script": "npm run dev",
-  "verification_script": "npm run lint && npm run type-check",
+  "verification_script": "npm run pipeline:quality",
   "copy_files": [".env.local"]
 }
