--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
     "clean": "rimraf .next out node_modules/.cache",
     "clean:ps": "powershell -ExecutionPolicy Bypass -File ./scripts/cleanup.ps1",
     "reinstall": "rimraf node_modules package-lock.json && npm install",
+    "hooks:install": "node ./scripts/install-hooks.js",
     "deploy:build": "npm run clean && npm run build",
     "check:vercel": "bash ./scripts/check-vercel-config.sh",
-    "check:dns": "bash ./scripts/check-dns-config.sh"
+    "check:dns": "bash ./scripts/check-dns-config.sh",
+    "pipeline:quality": "npm run lint && npm run type-check",
+    "pipeline:local": "npm run pipeline:quality && npm run build",
+    "pipeline:deploy-checks": "npm run check:vercel && npm run check:dns",
+    "pipeline:ci": "node ./scripts/run-pipeline-ci.js",
+    "repo:status": "powershell -NoProfile -ExecutionPolicy Bypass -File ./scripts/repo-status.ps1",
+    "repo:sync-mirror": "powershell -NoProfile -ExecutionPolicy Bypass -File ./scripts/sync-mirror-from-canonical.ps1"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
@@ -34,7 +41,6 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.3.1",
     "framer-motion": "^11.0.8",
-    "huggingface": "^1.4.0",
     "lucide-react": "^0.479.0",
     "next": "15.5.12",
     "next-auth": "^4.24.13",
