feat: hard-launch monetization stack and custom LLM bootstrap

--- a/.env.example
+++ b/.env.example
@@ -119,8 +119,12 @@ FACEBOOK_CLIENT_SECRET=
 # ============================================
 # Public contact endpoints used in CTA funnels
 NEXT_PUBLIC_CONTACT_EMAIL=irishmikeflaherty@gmail.com
-NEXT_PUBLIC_CONTACT_PHONE_E164=+16094128878
-NEXT_PUBLIC_CONTACT_PHONE_DISPLAY=(609) 412-8878
+NEXT_PUBLIC_CONTACT_PHONE_E164=+18563208570
+NEXT_PUBLIC_CONTACT_PHONE_DISPLAY=(856) 320-8570
+NEXT_PUBLIC_EMERGENCY_PHONE_E164=+16094128878
+NEXT_PUBLIC_EMERGENCY_PHONE_DISPLAY=(609) 412-8878
+NEXT_PUBLIC_CASHAPP_TAG=$hackavelli88
+NEXT_PUBLIC_EMERGENCY_UNLOCK_DONATION_USD=5
 NEXT_PUBLIC_TEXT_PREFILL=Hi TradeHax AI, I want to schedule a service.
 
 # Google Workspace / scheduling links
@@ -162,6 +166,11 @@ NEXT_PUBLIC_ALCHEMY_REF=
 # NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_...
 # STRIPE_SECRET_KEY=sk_test_...
 # STRIPE_WEBHOOK_SECRET=whsec_...
+# TRADEHAX_STRIPE_CHECKOUT_URL=https://buy.stripe.com/...
+# TRADEHAX_COINBASE_CHECKOUT_URL=https://commerce.coinbase.com/checkout/...
+# TRADEHAX_ALLOW_PAYMENT_SIMULATION=false
+# TRADEHAX_WEBHOOK_SECRET=change-this-before-production
+# TRADEHAX_ADMIN_KEY=change-this-before-production
 
 # ============================================
 # Feature Flags
