--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
-    "@solana/wallet-adapter-wallets": "^0.19.37",
+    "@solana/wallet-adapter-wallets": "^0.19.33",
     "@solana/web3.js": "^1.98.0",
     "@vercel/analytics": "^1.6.1",
+    "ai": "^6.0.91",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.3.1",
@@ -54,19 +55,19 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.182.0",
-    "transformers": "^3.1.0"
+    "transformers": "^1.8.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^0.1.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/three": "^0.182.0",
     "autoprefixer": "^10.4.24",
-    "eslint": "^9.1.0",
-    "eslint-config-next": "15.1.6",
+    "eslint": "^10.0.0",
+    "eslint-config-next": "^0.2.4",
     "postcss": "^8",
-    "rimraf": "^5.0.0",
+    "rimraf": "^6.1.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
