feat(ai): wire Hugging Face chat+image generation with open-mode controls

--- a/.env.example
+++ b/.env.example
@@ -173,6 +173,29 @@ NEXT_PUBLIC_ALCHEMY_REF=
 # TRADEHAX_ADMIN_KEY=change-this-before-production
 
 # ============================================
+# AI (Hugging Face)
+# ============================================
+# Server-side only token for Hugging Face inference.
+# Create one at: https://huggingface.co/settings/tokens
+HF_API_TOKEN=
+
+# LLM + image models
+HF_MODEL_ID=mistralai/Mistral-7B-Instruct-v0.1
+HF_IMAGE_MODEL_ID=stabilityai/stable-diffusion-2-1
+
+# Generation tuning
+LLM_TEMPERATURE=0.85
+LLM_MAX_LENGTH=768
+LLM_TOP_P=0.95
+HF_IMAGE_STEPS=30
+HF_IMAGE_GUIDANCE_SCALE=6.5
+HF_IMAGE_NEGATIVE_PROMPT_DEFAULT=blurry, low quality, watermark, logo, text overlay, disfigured
+
+# Open Mode controls (set to false to make responses more conservative)
+TRADEHAX_LLM_OPEN_MODE=true
+TRADEHAX_IMAGE_OPEN_MODE=true
+
+# ============================================
 # Feature Flags
 # ============================================
 # Toggle features on/off
