feat(intelligence): execute phase 2 watchlists, routing, and provider adapters

--- a/.env.example
+++ b/.env.example
@@ -196,6 +196,34 @@ TRADEHAX_LLM_OPEN_MODE=true
 TRADEHAX_IMAGE_OPEN_MODE=true
 
 # ============================================
+# Intelligence Phase 2
+# ============================================
+# Data provider mode: mock | vendor (auto-detect if blank)
+INTELLIGENCE_DATA_PROVIDER=mock
+TRADEHAX_INTELLIGENCE_PROVIDER=
+INTELLIGENCE_VENDOR_NAME=unusualwhales
+
+# Vendor API keys (set at least one to run vendor mode in live configuration)
+UNUSUALWHALES_API_KEY=
+POLYGON_API_KEY=
+FINNHUB_API_KEY=
+BLOOMBERG_API_KEY=
+BPIPE_TOKEN=
+
+# Discord alert routing webhooks
+TRADEHAX_DISCORD_WEBHOOK=
+TRADEHAX_DISCORD_WEBHOOK_FREE=
+TRADEHAX_DISCORD_WEBHOOK_BASIC=
+TRADEHAX_DISCORD_WEBHOOK_PRO=
+TRADEHAX_DISCORD_WEBHOOK_ELITE=
+
+# Optional Discord channel labels used in route metadata
+TRADEHAX_DISCORD_CHANNEL_FREE=intel-community
+TRADEHAX_DISCORD_CHANNEL_BASIC=intel-basic
+TRADEHAX_DISCORD_CHANNEL_PRO=intel-pro
+TRADEHAX_DISCORD_CHANNEL_ELITE=intel-elite
+
+# ============================================
 # Feature Flags
 # ============================================
 # Toggle features on/off
