feat(intelligence): execute phase 3 vendor adapters, durable storage, and thread routing

--- a/.env.example
+++ b/.env.example
@@ -223,6 +223,40 @@ TRADEHAX_DISCORD_CHANNEL_BASIC=intel-basic
 TRADEHAX_DISCORD_CHANNEL_PRO=intel-pro
 TRADEHAX_DISCORD_CHANNEL_ELITE=intel-elite
 
+# Optional Discord thread routing (strategy + risk profile)
+# Default thread id can be a Discord channel/thread id (example provided by user):
+TRADEHAX_DISCORD_DEFAULT_THREAD_ID=1421509686443905094
+TRADEHAX_DISCORD_THREAD_OPTIONS_FLOW=
+TRADEHAX_DISCORD_THREAD_DARK_POOL=
+TRADEHAX_DISCORD_THREAD_CRYPTO_FLOW=
+TRADEHAX_DISCORD_THREAD_CATALYST_NEWS=
+TRADEHAX_DISCORD_THREAD_URGENT=
+TRADEHAX_DISCORD_THREAD_WATCH=
+TRADEHAX_DISCORD_THREAD_INFO=
+TRADEHAX_DISCORD_SERVER_ID=1421509686443905094
+
+# Provider adapter tuning
+TRADEHAX_INTELLIGENCE_CACHE_MS=15000
+UNUSUALWHALES_BASE_URL=https://api.unusualwhales.com
+UNUSUALWHALES_FLOW_ENDPOINT=
+UNUSUALWHALES_DARK_POOL_ENDPOINT=
+UNUSUALWHALES_NEWS_ENDPOINT=
+POLYGON_BASE_URL=https://api.polygon.io
+BLOOMBERG_PROXY_BASE_URL=
+BLOOMBERG_FLOW_ENDPOINT=
+BLOOMBERG_DARK_POOL_ENDPOINT=
+BLOOMBERG_NEWS_ENDPOINT=
+
+# Persistent watchlist/alert storage (Phase 3)
+TRADEHAX_INTELLIGENCE_STORAGE=memory
+SUPABASE_URL=
+SUPABASE_SERVICE_ROLE_KEY=
+TRADEHAX_SUPABASE_WATCHLIST_TABLE=tradehax_watchlist_items
+TRADEHAX_SUPABASE_ALERTS_TABLE=tradehax_intelligence_alerts
+
+# Vercel project metadata (safe to set in CI contexts)
+VERCEL_PROJECT_ID=prj_LDmkGrAq06c1DJcH98BeN6GYhZpW
+
 # ============================================
 # Feature Flags
 # ============================================
