--- a/.env.vercel.production.template
+++ b/.env.vercel.production.template
@@ -51,6 +51,22 @@ TRADEHAX_IMAGE_OPEN_MODE=true
 # ============================================
 BLOOMBERG_API_KEY=
 BPIPE_TOKEN=
+UNUSUALWHALES_API_KEY=
+POLYGON_API_KEY=
+FINNHUB_API_KEY=
+INTELLIGENCE_DATA_PROVIDER=vendor
+INTELLIGENCE_VENDOR_NAME=unusualwhales
+TRADEHAX_INTELLIGENCE_PROVIDER=
+TRADEHAX_INTELLIGENCE_CACHE_MS=15000
+UNUSUALWHALES_BASE_URL=https://api.unusualwhales.com
+UNUSUALWHALES_FLOW_ENDPOINT=
+UNUSUALWHALES_DARK_POOL_ENDPOINT=
+UNUSUALWHALES_NEWS_ENDPOINT=
+POLYGON_BASE_URL=https://api.polygon.io
+BLOOMBERG_PROXY_BASE_URL=
+BLOOMBERG_FLOW_ENDPOINT=
+BLOOMBERG_DARK_POOL_ENDPOINT=
+BLOOMBERG_NEWS_ENDPOINT=
 
 # ============================================
 # Solana / Web3
@@ -123,6 +139,42 @@ TRADEHAX_COINBASE_CHECKOUT_URL=
 TRADEHAX_ALLOW_PAYMENT_SIMULATION=false
 TRADEHAX_WEBHOOK_SECRET=replace_this_secret
 TRADEHAX_ADMIN_KEY=replace_this_admin_key
+
+# ============================================
+# Intelligence Phase 3 persistence
+# ============================================
+TRADEHAX_INTELLIGENCE_STORAGE=supabase
+SUPABASE_URL=
+SUPABASE_SERVICE_ROLE_KEY=
+TRADEHAX_SUPABASE_WATCHLIST_TABLE=tradehax_watchlist_items
+TRADEHAX_SUPABASE_ALERTS_TABLE=tradehax_intelligence_alerts
+
+# ============================================
+# Discord alert routing + threads
+# ============================================
+TRADEHAX_DISCORD_WEBHOOK=
+TRADEHAX_DISCORD_WEBHOOK_FREE=
+TRADEHAX_DISCORD_WEBHOOK_BASIC=
+TRADEHAX_DISCORD_WEBHOOK_PRO=
+TRADEHAX_DISCORD_WEBHOOK_ELITE=
+TRADEHAX_DISCORD_CHANNEL_FREE=intel-community
+TRADEHAX_DISCORD_CHANNEL_BASIC=intel-basic
+TRADEHAX_DISCORD_CHANNEL_PRO=intel-pro
+TRADEHAX_DISCORD_CHANNEL_ELITE=intel-elite
+TRADEHAX_DISCORD_DEFAULT_THREAD_ID=1421509686443905094
+TRADEHAX_DISCORD_THREAD_OPTIONS_FLOW=
+TRADEHAX_DISCORD_THREAD_DARK_POOL=
+TRADEHAX_DISCORD_THREAD_CRYPTO_FLOW=
+TRADEHAX_DISCORD_THREAD_CATALYST_NEWS=
+TRADEHAX_DISCORD_THREAD_URGENT=
+TRADEHAX_DISCORD_THREAD_WATCH=
+TRADEHAX_DISCORD_THREAD_INFO=
+TRADEHAX_DISCORD_SERVER_ID=1421509686443905094
+
+# ============================================
+# Vercel project metadata
+# ============================================
+VERCEL_PROJECT_ID=prj_LDmkGrAq06c1DJcH98BeN6GYhZpW
 
 # ============================================
 # Feature toggles
