feat(ai): add consent-aware ingestion with admin dataset export and intelligence telemetry

--- a/.env.example
+++ b/.env.example
@@ -200,6 +200,14 @@ HF_IMAGE_NEGATIVE_PROMPT_DEFAULT=blurry, low quality, watermark, logo, text over
 TRADEHAX_LLM_OPEN_MODE=true
 TRADEHAX_IMAGE_OPEN_MODE=true
 
+# Admin + ingestion controls
+TRADEHAX_ADMIN_KEY=
+TRADEHAX_SUPERUSER_CODE=
+TRADEHAX_DATA_HASH_SALT=change-this-salt
+TRADEHAX_BEHAVIOR_MAX_RECORDS=5000
+TRADEHAX_DEFAULT_TRAINING_CONSENT=false
+TRADEHAX_ALLOW_IMPLICIT_ANALYTICS_CONSENT=false
+
 # ============================================
 # Intelligence Phase 2
 # ============================================
