--- a/.env.vercel.production.template
+++ b/.env.vercel.production.template
@@ -50,6 +50,11 @@ HF_IMAGE_GUIDANCE_SCALE=6.5
 HF_IMAGE_NEGATIVE_PROMPT_DEFAULT=blurry, low quality, watermark, logo, text overlay, disfigured
 TRADEHAX_LLM_OPEN_MODE=true
 TRADEHAX_IMAGE_OPEN_MODE=true
+TRADEHAX_SUPERUSER_CODE=replace_this_superuser_code
+TRADEHAX_DATA_HASH_SALT=replace_this_hash_salt
+TRADEHAX_BEHAVIOR_MAX_RECORDS=5000
+TRADEHAX_DEFAULT_TRAINING_CONSENT=false
+TRADEHAX_ALLOW_IMPLICIT_ANALYTICS_CONSENT=false
 
 # ============================================
 # Trading / data feeds
