chore(seo+tooling): standardize metadata, migrate lint CLI, and harden deploy preflight

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint . --ignore-pattern next-env.d.ts",
+    "lint:fix": "eslint . --fix --ignore-pattern next-env.d.ts",
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "clean": "rimraf .next out node_modules/.cache",
@@ -15,11 +15,11 @@
     "reinstall": "rimraf node_modules package-lock.json && npm install",
     "hooks:install": "node ./scripts/install-hooks.js",
     "deploy:build": "npm run clean && npm run build",
-    "check:vercel": "bash ./scripts/check-vercel-config.sh",
-    "check:dns": "bash ./scripts/check-dns-config.sh",
+    "check:vercel": "node ./scripts/check-deploy-config.js --vercel",
+    "check:dns": "node ./scripts/check-deploy-config.js --dns",
     "pipeline:quality": "npm run lint && npm run type-check",
     "pipeline:local": "npm run pipeline:quality && npm run build",
-    "pipeline:deploy-checks": "npm run check:vercel && npm run check:dns",
+    "pipeline:deploy-checks": "node ./scripts/check-deploy-config.js",
     "pipeline:ci": "node ./scripts/run-pipeline-ci.js",
     "llm:prepare-dataset": "node ./scripts/prepare-custom-llm-dataset.js",
     "repo:status": "powershell -NoProfile -ExecutionPolicy Bypass -File ./scripts/repo-status.ps1",
