--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,12 @@
   "installCommand": "npm install",
   "framework": "nextjs",
   "regions": ["iad1"],
+  "crons": [
+    {
+      "path": "/api/cron/ai/export-dataset",
+      "schedule": "0 6 * * *"
+    }
+  ],
   "cleanUrls": true,
   "trailingSlash": false,
   "redirects": [
