--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
     {
       "path": "/api/cron/ai/export-dataset",
       "schedule": "0 6 * * *"
+    },
+    {
+      "path": "/api/cron/ai/retrieval-snapshot",
+      "schedule": "0 */6 * * *"
     }
   ],
   "cleanUrls": true,
