--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # ============================================
 # Copy this file to .env.local and fill in your values
 # CRITICAL: Never commit .env or .env.local files to git!
-# 
+#
 # For Vercel deployment:
 # 1. Set these variables in Vercel Dashboard → Settings → Environment Variables
 # 2. Choose appropriate environment: Production, Preview, Development
@@ -154,6 +154,56 @@ NEXT_PUBLIC_SOCIAL_YOUTUBE_URL=https://www.youtube.com/@tradehaxnet
 NEXT_PUBLIC_SOCIAL_GITHUB_URL=https://github.com/DarkModder33/main
 NEXT_PUBLIC_SOCIAL_FACEBOOK_URL=
 NEXT_PUBLIC_SOCIAL_INSTAGRAM_URL=
+
+# Social Media API integrations (optional - for publishing/sync/analytics workflows)
+# Comma-separated providers you plan to enable (x,instagram,tiktok,youtube,facebook,linkedin,reddit,discord)
+TRADEHAX_SOCIAL_PROVIDERS=
+
+# X / Twitter API
+X_API_KEY=
+X_API_KEY_SECRET=
+X_ACCESS_TOKEN=
+X_ACCESS_TOKEN_SECRET=
+X_BEARER_TOKEN=
+
+# Instagram Graph API (requires Facebook app)
+INSTAGRAM_APP_ID=
+INSTAGRAM_APP_SECRET=
+INSTAGRAM_ACCESS_TOKEN=
+INSTAGRAM_BUSINESS_ACCOUNT_ID=
+
+# TikTok API
+TIKTOK_CLIENT_KEY=
+TIKTOK_CLIENT_SECRET=
+TIKTOK_ACCESS_TOKEN=
+
+# YouTube Data API
+YOUTUBE_API_KEY=
+YOUTUBE_CHANNEL_ID=
+
+# Facebook Graph API
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
+FACEBOOK_PAGE_ACCESS_TOKEN=
+FACEBOOK_PAGE_ID=
+
+# LinkedIn API
+LINKEDIN_CLIENT_ID=
+LINKEDIN_CLIENT_SECRET=
+LINKEDIN_ACCESS_TOKEN=
+LINKEDIN_ORGANIZATION_ID=
+
+# Reddit API
+REDDIT_CLIENT_ID=
+REDDIT_CLIENT_SECRET=
+REDDIT_USERNAME=
+REDDIT_PASSWORD=
+REDDIT_USER_AGENT=tradehax-bot/1.0
+
+# Discord API
+DISCORD_BOT_TOKEN=
+DISCORD_GUILD_ID=
+DISCORD_ANNOUNCEMENTS_CHANNEL_ID=
 
 # Affiliate URLs (keep full referral URL/path to preserve attribution credit)
 NEXT_PUBLIC_COINBASE_REF=
