--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "pipeline:local": "npm run pipeline:quality && npm run build",
     "pipeline:deploy-checks": "node ./scripts/check-deploy-config.js",
     "pipeline:ci": "node ./scripts/run-pipeline-ci.js",
+    "deploy:one-click": "node ./scripts/one-button-deploy.js --prod",
+    "deploy:one-click:preview": "node ./scripts/one-button-deploy.js --preview",
     "llm:prepare-dataset": "node ./scripts/prepare-custom-llm-dataset.js",
+    "social:setup": "node ./scripts/setup-social-apis.js",
+    "social:check": "node ./scripts/check-social-api-config.js",
     "repo:status": "powershell -NoProfile -ExecutionPolicy Bypass -File ./scripts/repo-status.ps1",
     "repo:sync-mirror": "powershell -NoProfile -ExecutionPolicy Bypass -File ./scripts/sync-mirror-from-canonical.ps1"
   },
