feat(admin): add social wizard push-to-vercel button and secure sync api

--- a/.env.example
+++ b/.env.example
@@ -323,6 +323,8 @@ TRADEHAX_SUPABASE_WATCHLIST_TABLE=tradehax_watchlist_items
 TRADEHAX_SUPABASE_ALERTS_TABLE=tradehax_intelligence_alerts
 
 # Vercel project metadata (safe to set in CI contexts)
+VERCEL_TOKEN=
+VERCEL_ORG_ID=
 VERCEL_PROJECT_ID=prj_LDmkGrAq06c1DJcH98BeN6GYhZpW
 
 # ============================================
