feat(admin): add deploy-after-sync toggle for social wizard

--- a/.env.example
+++ b/.env.example
@@ -327,6 +327,12 @@ VERCEL_TOKEN=
 VERCEL_ORG_ID=
 VERCEL_PROJECT_ID=prj_LDmkGrAq06c1DJcH98BeN6GYhZpW
 
+# Optional deploy hook URLs for Social Wizard "deploy after sync"
+# Configure one shared hook, or target-specific hooks.
+TRADEHAX_VERCEL_DEPLOY_HOOK_URL=
+TRADEHAX_VERCEL_DEPLOY_HOOK_URL_PRODUCTION=
+TRADEHAX_VERCEL_DEPLOY_HOOK_URL_PREVIEW=
+
 # ============================================
 # Feature Flags
 # ============================================
