feat(ai-training): add benchmark/personalization persistence and phase 2.5/2.6 supabase migrations

--- a/.env.example
+++ b/.env.example
@@ -258,6 +258,10 @@ TRADEHAX_DATA_HASH_SALT=change-this-salt
 TRADEHAX_BEHAVIOR_MAX_RECORDS=5000
 TRADEHAX_DEFAULT_TRAINING_CONSENT=false
 TRADEHAX_ALLOW_IMPLICIT_ANALYTICS_CONSENT=false
+TRADEHAX_AI_TRAINING_STORAGE=memory
+TRADEHAX_SUPABASE_AI_BENCHMARKS_TABLE=ai_training_benchmarks
+TRADEHAX_SUPABASE_AI_PERSONALIZATION_TABLE=ai_trading_personalization_profiles
+TRADEHAX_SUPABASE_AI_TRADE_OUTCOMES_TABLE=ai_trading_trade_outcomes
 
 # ============================================
 # Intelligence Phase 2
