--- a/.env.vercel.production.template
+++ b/.env.vercel.production.template
@@ -55,6 +55,10 @@ TRADEHAX_DATA_HASH_SALT=replace_this_hash_salt
 TRADEHAX_BEHAVIOR_MAX_RECORDS=5000
 TRADEHAX_DEFAULT_TRAINING_CONSENT=false
 TRADEHAX_ALLOW_IMPLICIT_ANALYTICS_CONSENT=false
+TRADEHAX_AI_TRAINING_STORAGE=supabase
+TRADEHAX_SUPABASE_AI_BENCHMARKS_TABLE=ai_training_benchmarks
+TRADEHAX_SUPABASE_AI_PERSONALIZATION_TABLE=ai_trading_personalization_profiles
+TRADEHAX_SUPABASE_AI_TRADE_OUTCOMES_TABLE=ai_trading_trade_outcomes
 
 # ============================================
 # Trading / data feeds
