--- a/vercel.json
+++ b/vercel.json
@@ -55,7 +55,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://vercel.live https://va.vercel-scripts.com https://www.googletagmanager.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https: blob:; font-src 'self' data:; connect-src 'self' https://api.mainnet-beta.solana.com https://*.solana.com wss://*.solana.com https://www.google-analytics.com https://analytics.google.com https://*.helius-rpc.com https://tradehax.net https://tradehaxai.tech; frame-ancestors 'none'; base-uri 'self'; form-action 'self';"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://vercel.live https://va.vercel-scripts.com https://www.googletagmanager.com https://www.google-analytics.com https://s3.tradingview.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https: blob:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://api.mainnet-beta.solana.com https://*.solana.com wss://*.solana.com https://www.google-analytics.com https://analytics.google.com https://*.helius-rpc.com https://tradehax.net https://tradehaxai.tech https://*.tradingview.com wss://*.tradingview.com; frame-src 'self' https://*.tradingview.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self';"
         }
       ]
     },
