--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "deploy:one-click": "node ./scripts/one-button-deploy.js --prod",
     "deploy:one-click:preview": "node ./scripts/one-button-deploy.js --preview",
     "llm:prepare-dataset": "node ./scripts/prepare-custom-llm-dataset.js",
+    "llm:validate-dataset": "node ./scripts/validate-custom-llm-dataset.js",
+    "llm:prepare-and-validate": "npm run llm:prepare-dataset && npm run llm:validate-dataset",
     "social:setup": "node ./scripts/setup-social-apis.js",
     "social:check": "node ./scripts/check-social-api-config.js",
     "discord:register-commands": "node ./scripts/discord/register-commands.mjs",
