--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "pipeline:deploy-checks": "node ./scripts/check-deploy-config.js",
     "pipeline:ci": "node ./scripts/run-pipeline-ci.js",
     "deploy:one-click": "node ./scripts/one-button-deploy.js --prod",
+    "deploy:one-click:strict-dns": "node ./scripts/one-button-deploy.js --prod --strict-dns",
     "deploy:one-click:preview": "node ./scripts/one-button-deploy.js --preview",
+    "deploy:one-click:preview:strict-dns": "node ./scripts/one-button-deploy.js --preview --strict-dns",
     "llm:prepare-dataset": "node ./scripts/prepare-custom-llm-dataset.js",
     "llm:validate-dataset": "node ./scripts/validate-custom-llm-dataset.js",
     "llm:prepare-and-validate": "npm run llm:prepare-dataset && npm run llm:validate-dataset",
