--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
     {
       "path": "/api/cron/ai/retrieval-snapshot",
       "schedule": "0 */6 * * *"
+    },
+    {
+      "path": "/api/cron/investor-academy/replay-cleanup",
+      "schedule": "*/30 * * * *"
     }
   ],
   "cleanUrls": true,
